--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,55 +1,54 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	background-color: #fafafa;
-	color: #212121;
-	line-height: 1.5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #fafafa;
+  color: #212121;
+  line-height: 1.5;
 }
 
-
 .input {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	margin: auto;
-	width: 200px;
-	border-radius: 50px;
-	margin-bottom: 20px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  width: 200px;
+  border-radius: 50px;
+  margin-bottom: 20px;
 }
 
 .timer {
-	padding-top: 40;
-	display: flex;
-	font-size: 36px;
-	justify-content: center;
+  padding-top: 40;
+  display: flex;
+  font-size: 36px;
+  justify-content: center;
 }
 
 .field {
-	position: relative;
-	display: flex;
-	flex-direction: column;
-	margin-left: 10px;
-	margin-right: 10px;
-	padding-bottom: 15px;
-	text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-bottom: 15px;
+  text-align: center;
 }
 
 .value {
-	color: #4abd5d;
+  color: #4abd5d;
 }
 
 .label {
-	color: rgb(72, 2, 134)
+  color: rgb(72, 2, 134);
 }
 
 .field:not(:first-child)::before {
-	content: ':';
-	position: absolute;
-	left: -15px;
+  content: ':';
+  position: absolute;
+  left: -15px;
 }
